# OpenGL-Dev

camera/: .gitignore  CMakeLists.txt  Config.h.in  README.md
camera/res/shaders/: fragmentShader.glsl  fsLight.glsl  vertexShader.glsl
camera/src/: Application.cpp  Application.hpp  Shader.cpp  main.hpp
glLight/: .gitignore  CMakeLists.txt  README.md
glLight/include/glad/: glad.h
glLight/res/shaders/: light_object_fs.glsl  lighting_fs.glsl  vertexShader.glsl
glLight/src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp  glad.c
lights/: .gitignore  CMakeLists.txt  README.md
lights/dep/glad/include/glad/: glad.h
lights/dep/glad/src/: glad.c
lights/res/shaders/: fragmentShader.glsl
lights/src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Shader.hpp  main.hpp
